--- a/frontend/style.css
+++ b/frontend/style.css
@@ -216,6 +216,22 @@ main.category-container {
     text-align: center;
 }
 
+.orange-signin-btn {
+    background-color: #f7931e;
+    color: white;
+    font-weight: bold;
+    padding: 10px 18px;
+    border-radius: 5px;
+    text-decoration: none;
+    font-size: 1rem;
+    margin-left: 1rem;
+    display: inline-block;
+}
+
+.orange-signin-btn:hover {
+    background-color: #e5801b;
+}
+
 .orange-btn:hover {
     background-color: #e5801b;
     /* Darker orange for hover */
